--- a/index.html
+++ b/index.html
@@ -1,12 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Moneytolia Mülakat</title>
-    <script src="js/app.js"></script>
-</head>
-<body>
-    <h1>Anasayfa</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Üye Girişi Sayfası</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  </head>
+  <body class="min-h-screen">
+    <header
+      class="mx-3 mt-5 lg:mx-8 lg:mt-10 px-4 py-5 lg:py-8 lg:px-5 shadow-md rounded-md bg-white"
+    >
+      <div class="flex flex-row align-center justify-between">
+        <div class="flex flex-row justify-start lg:justify-center items-center">
+          <img
+            class="hidden lg:block"
+            src="images/logo.png"
+            alt="logo-desktop"
+          />
+          <img
+            class="block lg:hidden max-w-[25%]"
+            src="images/logo-mobile.png"
+            alt="logo-mobile"
+          />
+          <div class="mx-4 lg:mx-6 w-0.5 h-10 bg-gray-300"></div>
+          <img class="max-w-25" src="images/test-logo.png" alt="brand-logo" />
+        </div>
+        <a class="block lg:hidden items-center flex text-3xl text-[#f4511e]" id="menuToggle"
+          ><i class="fa-solid fa-bars"></i
+        ></a>
+        <div class="hidden lg:flex flex-row">
+          <a href="person.html" class="flex items-center justify-center me-5">
+            <i class="fa-solid fa-circle-user me-3 text-3xl"></i
+            ><span>Murat Yılmaz</span>
+          </a>
+          <a
+            class="bg-[#f4511e] rounded-md border-[#f4511e] text-white px-8 py-2 flex flex-row items-center justify-center"
+            href="login.html"
+            ><i class="fa-solid fa-arrow-right-to-bracket me-5 text-xl"></i
+            ><span class="text-md">Çıkış</span>
+          </a>
+        </div>
+        <div
+          id="backdrop"
+          class="fixed inset-0 bg-black opacity-50 z-30 hidden"
+        ></div>
+        <div
+          id="sideMenu"
+          class="fixed top-0 right-0 h-full w-64 bg-white shadow-lg transform translate-x-full transition-transform duration-300 ease-in-out z-40"
+        >
+          <div
+            class="flex justify-end items-center m-5 pb-3 border-b border-b-gray-300 border-solid"
+          >
+            <a id="menuClose" class="text-5xl text-[#f4511e]"
+              ><i class="fa-solid fa-xmark"></i
+            ></a>
+          </div>
+          <div class="m-5 flex flex-col items-center justify-center">
+            <a
+              href="person.html"
+              class="flex items-center justify-center flex-col mb-5"
+            >
+              <i class="fa-solid fa-circle-user text-5xl mb-5"></i
+              ><span class="text-2xl font-[600]">Murat Yılmaz</span>
+            </a>
+            <a
+              class="bg-[#f4511e] rounded-md border-[#f4511e] max-w-40 text-white px-8 py-2 flex flex-row items-center justify-center"
+              href="login.html"
+              ><i class="fa-solid fa-arrow-right-to-bracket me-5 text-xl"></i
+              ><span class="text-md">Çıkış</span>
+            </a>
+          </div>
+          <div>
+            <section>
+              <nav class="px-3">
+                <ul>
+                  <li>
+                    <a
+                      class="flex items-center justify-between bg-[#ECF3F8] hover:bg-[#FF4307] hover:text-white rounded-md px-5 py-3 w-full block transition-all delay-150 duration-300 mb-5"
+                      href="new-campaign.html"
+                      >Yeni Kampanyalar <i class="fa-solid fa-angle-right"></i
+                    ></a>
+                  </li>
+                  <li>
+                    <a
+                      class="flex items-center justify-between bg-[#ECF3F8] hover:bg-[#FF4307] hover:text-white rounded-md px-5 py-3 w-full block transition-all delay-150 duration-300 mb-5"
+                      href="campaigns.html"
+                      >Kampanyalar <i class="fa-solid fa-angle-right"></i
+                    ></a>
+                  </li>
+                </ul>
+              </nav>
+            </section>
+          </div>
+        </div>
+      </div>
+    </header>
+    <div class="flex justify-between align-center flex-row mx-3 mt-5 lg:mx-8 lg:mt-10 ">
+      <div
+        class="shadow-md flex-col rounded-md bg-white mr-5 py-5 px-4 min-w-[25%] h-[calc(100vh-200px)] hidden lg:block"
+      >
+        <section>
+          <nav class="px-3">
+            <ul>
+              <li>
+                <a
+                  class="flex items-center justify-between bg-[#ECF3F8] hover:bg-[#FF4307] hover:text-white rounded-md px-5 py-3 w-full block transition-all delay-150 duration-300 mb-5"
+                  href="new-campaign.html"
+                  >Yeni Kampanyalar <i class="fa-solid fa-angle-right"></i
+                ></a>
+              </li>
+              <li>
+                <a
+                  class="flex items-center justify-between bg-[#ECF3F8] hover:bg-[#FF4307] hover:text-white rounded-md px-5 py-3 w-full block transition-all delay-150 duration-300 mb-5"
+                  href="campaigns.html"
+                  >Kampanyalar <i class="fa-solid fa-angle-right"></i
+                ></a>
+              </li>
+            </ul>
+          </nav>
+        </section>
+      </div>
+      <div class="max-w-[100%] lg:max-w-[75%] w-full py-5 px-4 bg-white rounded-md">
+        Burası içerik alanı
+      </div>
+    </div>
+  </body>
+  <script src="js/app.js"></script>
 </html>
