new campaign page complete

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                   <li>
                     <a
                       class="flex items-center justify-between bg-[#ECF3F8] hover:bg-[#FF4307] hover:text-white rounded-md px-5 py-3 w-full block transition-all delay-150 duration-300 mb-5"
-                      href="campaigns.html"
+                      href="index.html"
                       >Kampanyalar <i class="fa-solid fa-angle-right"></i
                     ></a>
                   </li>
@@ -130,7 +130,7 @@
               <li>
                 <a
                   class="flex items-center justify-between bg-[#ECF3F8] hover:bg-[#FF4307] hover:text-white rounded-md px-5 py-3 w-full block transition-all delay-150 duration-300 mb-5"
-                  href="campaigns.html"
+                  href="index.html"
                   >Kampanyalar <i class="fa-solid fa-angle-right"></i
                 ></a>
               </li>
